# pixelbrot

./: .gitignore  CMakeLists.txt  README.md  makefile
src/: colors.h  image.cpp  image.h  interpolate.cpp  main.cpp  pixel.h  util.cpp  util.h
